--- a/jup_codes/5-FU/Fu_All_Samples_Results.ipynb
+++ b/jup_codes/5-FU/Fu_All_Samples_Results.ipynb
@@ -59,10 +59,10 @@
     "cna_sensitive_file = read.table('TCGA - EMC DNA_REPi Fluorouracil Sensitive Samples CNA.tsv', header = T)\n",
     "\n",
     "# Remove unwanted samples from the data\n",
-    "olmayan = c('TCGA.AG.A01W', 'TCGA.AG.A01L', 'TCGA.AG.A01Y')\n",
-    "expr_sensitive_file = expr_sensitive_file %>% select(., -olmayan)\n",
-    "mut_sensitive_file = mut_sensitive_file %>% select(., -olmayan)\n",
-    "cna_sensitive_file = cna_sensitive_file %>% select(., -olmayan)\n",
+    "unwanted = c('TCGA.AG.A01W', 'TCGA.AG.A01L', 'TCGA.AG.A01Y')\n",
+    "expr_sensitive_file = expr_sensitive_file %>% select(., -unwanted)\n",
+    "mut_sensitive_file = mut_sensitive_file %>% select(., -unwanted)\n",
+    "cna_sensitive_file = cna_sensitive_file %>% select(., -unwanted)\n",
     "\n",
     "# Save the cleaned data to new files\n",
     "write.table(expr_sensitive_file, 'TCGA - EMC DNA_REPi Fluorouracil Sensitive Samples Gene Expression-3.tsv', sep = '\\t', row.names = F)\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "5f0d3129",
    "metadata": {
     "vscode": {
@@ -83,16 +83,16 @@
     {
      "data": {
       "text/html": [
-       "30"
+       "33"
       ],
       "text/latex": [
-       "30"
+       "33"
       ],
       "text/markdown": [
-       "30"
+       "33"
       ],
       "text/plain": [
-       "[1] 30"
+       "[1] 33"
       ]
      },
      "metadata": {},
