add : synergistic pen cox models

--- a/jup_codes/Paclitaxel/BRCA_Samples_Results.ipynb
+++ b/jup_codes/Paclitaxel/BRCA_Samples_Results.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "ee42af25",
    "metadata": {
     "vscode": {
@@ -865,6 +865,210 @@
     "\n",
     "#------\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "38e5e28d",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 3 × 16</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Dataset</th><th scope=col>Treatment</th><th scope=col>Gene_Pair</th><th scope=col>C_Index</th><th scope=col>Lambda</th><th scope=col>HR EXP_GENE1</th><th scope=col>HR CNA_GENE1</th><th scope=col>HR EXP_GENE2</th><th scope=col>HR CNA_GENE2</th><th scope=col>HR CONDITION[sensitive]</th><th scope=col>HR EXP_GENE1 : EXP_GENE2</th><th scope=col>HR EXP_GENE1 : CNA_GENE2</th><th scope=col>HR CNA_GENE1 : EXP_GENE2</th><th scope=col>HR CNA_GENE1 : CNA_GENE2</th><th scope=col>HR CNA_GENE1 : CONDITION[sensitive]</th><th scope=col>HR CNA_GENE2 : CONDITION[sensitive]</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>BRCA</td><td>Paclitaxel</td><td>TCF7L2 + LDHB</td><td>0.848</td><td>0.2059526</td><td>0.9894953</td><td>1.0556990</td><td>1.2214144</td><td>1.3191864</td><td>1.414882</td><td>1.004210</td><td>1.0363241</td><td>1.0053042</td><td>1.8384782</td><td>1.0665240</td><td>1.3922975</td></tr>\n",
+       "\t<tr><td>BRCA</td><td>Paclitaxel</td><td>TCF7L2 + FYN </td><td>0.891</td><td>0.1209628</td><td>0.9403425</td><td>1.4118459</td><td>1.3274081</td><td>0.6923251</td><td>1.743791</td><td>1.002431</td><td>0.9437122</td><td>1.0791471</td><td>0.5378607</td><td>1.5088709</td><td>0.6858213</td></tr>\n",
+       "\t<tr><td>BRCA</td><td>Paclitaxel</td><td>FYN + CXCR4  </td><td>0.935</td><td>0.1134970</td><td>1.3269204</td><td>0.7037608</td><td>0.9420673</td><td>3.4452204</td><td>1.826893</td><td>1.001284</td><td>1.1621142</td><td>0.9428143</td><td>1.0004836</td><td>0.7008326</td><td>3.4445005</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 3 × 16\n",
+       "\\begin{tabular}{llllllllllllllll}\n",
+       " Dataset & Treatment & Gene\\_Pair & C\\_Index & Lambda & HR EXP\\_GENE1 & HR CNA\\_GENE1 & HR EXP\\_GENE2 & HR CNA\\_GENE2 & HR CONDITION{[}sensitive{]} & HR EXP\\_GENE1 : EXP\\_GENE2 & HR EXP\\_GENE1 : CNA\\_GENE2 & HR CNA\\_GENE1 : EXP\\_GENE2 & HR CNA\\_GENE1 : CNA\\_GENE2 & HR CNA\\_GENE1 : CONDITION{[}sensitive{]} & HR CNA\\_GENE2 : CONDITION{[}sensitive{]}\\\\\n",
+       " <chr> & <chr> & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t BRCA & Paclitaxel & TCF7L2 + LDHB & 0.848 & 0.2059526 & 0.9894953 & 1.0556990 & 1.2214144 & 1.3191864 & 1.414882 & 1.004210 & 1.0363241 & 1.0053042 & 1.8384782 & 1.0665240 & 1.3922975\\\\\n",
+       "\t BRCA & Paclitaxel & TCF7L2 + FYN  & 0.891 & 0.1209628 & 0.9403425 & 1.4118459 & 1.3274081 & 0.6923251 & 1.743791 & 1.002431 & 0.9437122 & 1.0791471 & 0.5378607 & 1.5088709 & 0.6858213\\\\\n",
+       "\t BRCA & Paclitaxel & FYN + CXCR4   & 0.935 & 0.1134970 & 1.3269204 & 0.7037608 & 0.9420673 & 3.4452204 & 1.826893 & 1.001284 & 1.1621142 & 0.9428143 & 1.0004836 & 0.7008326 & 3.4445005\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 3 × 16\n",
+       "\n",
+       "| Dataset &lt;chr&gt; | Treatment &lt;chr&gt; | Gene_Pair &lt;chr&gt; | C_Index &lt;dbl&gt; | Lambda &lt;dbl&gt; | HR EXP_GENE1 &lt;dbl&gt; | HR CNA_GENE1 &lt;dbl&gt; | HR EXP_GENE2 &lt;dbl&gt; | HR CNA_GENE2 &lt;dbl&gt; | HR CONDITION[sensitive] &lt;dbl&gt; | HR EXP_GENE1 : EXP_GENE2 &lt;dbl&gt; | HR EXP_GENE1 : CNA_GENE2 &lt;dbl&gt; | HR CNA_GENE1 : EXP_GENE2 &lt;dbl&gt; | HR CNA_GENE1 : CNA_GENE2 &lt;dbl&gt; | HR CNA_GENE1 : CONDITION[sensitive] &lt;dbl&gt; | HR CNA_GENE2 : CONDITION[sensitive] &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| BRCA | Paclitaxel | TCF7L2 + LDHB | 0.848 | 0.2059526 | 0.9894953 | 1.0556990 | 1.2214144 | 1.3191864 | 1.414882 | 1.004210 | 1.0363241 | 1.0053042 | 1.8384782 | 1.0665240 | 1.3922975 |\n",
+       "| BRCA | Paclitaxel | TCF7L2 + FYN  | 0.891 | 0.1209628 | 0.9403425 | 1.4118459 | 1.3274081 | 0.6923251 | 1.743791 | 1.002431 | 0.9437122 | 1.0791471 | 0.5378607 | 1.5088709 | 0.6858213 |\n",
+       "| BRCA | Paclitaxel | FYN + CXCR4   | 0.935 | 0.1134970 | 1.3269204 | 0.7037608 | 0.9420673 | 3.4452204 | 1.826893 | 1.001284 | 1.1621142 | 0.9428143 | 1.0004836 | 0.7008326 | 3.4445005 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Dataset Treatment  Gene_Pair     C_Index Lambda    HR EXP_GENE1 HR CNA_GENE1\n",
+       "1 BRCA    Paclitaxel TCF7L2 + LDHB 0.848   0.2059526 0.9894953    1.0556990   \n",
+       "2 BRCA    Paclitaxel TCF7L2 + FYN  0.891   0.1209628 0.9403425    1.4118459   \n",
+       "3 BRCA    Paclitaxel FYN + CXCR4   0.935   0.1134970 1.3269204    0.7037608   \n",
+       "  HR EXP_GENE2 HR CNA_GENE2 HR CONDITION[sensitive] HR EXP_GENE1 : EXP_GENE2\n",
+       "1 1.2214144    1.3191864    1.414882                1.004210                \n",
+       "2 1.3274081    0.6923251    1.743791                1.002431                \n",
+       "3 0.9420673    3.4452204    1.826893                1.001284                \n",
+       "  HR EXP_GENE1 : CNA_GENE2 HR CNA_GENE1 : EXP_GENE2 HR CNA_GENE1 : CNA_GENE2\n",
+       "1 1.0363241                1.0053042                1.8384782               \n",
+       "2 0.9437122                1.0791471                0.5378607               \n",
+       "3 1.1621142                0.9428143                1.0004836               \n",
+       "  HR CNA_GENE1 : CONDITION[sensitive] HR CNA_GENE2 : CONDITION[sensitive]\n",
+       "1 1.0665240                           1.3922975                          \n",
+       "2 1.5088709                           0.6858213                          \n",
+       "3 0.7008326                           3.4445005                          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#synergistic pen cox models------------------------------\n",
+    "\n",
+    "rename_generic_terms <- function(term_vec, GEN1, GEN2) {\n",
+    "  out <- term_vec\n",
+    "  # gene1\n",
+    "  out <- gsub(paste0(\"expr_\", GEN1), \"expr_gene1\", out, fixed = TRUE)\n",
+    "  out <- gsub(paste0(\"factor(cna_\", GEN1, \")1\"), \"factor(cna_gene1)1\", out, fixed = TRUE)\n",
+    "  # gene2\n",
+    "  out <- gsub(paste0(\"expr_\", GEN2), \"expr_gene2\", out, fixed = TRUE)\n",
+    "  out <- gsub(paste0(\"factor(cna_\", GEN2, \")1\"), \"factor(cna_gene2)1\", out, fixed = TRUE)\n",
+    "  out\n",
+    "}\n",
+    "\n",
+    "rename_pretty_generic_terms <- function(term_vec_generic) {\n",
+    "  x <- term_vec_generic\n",
+    "  \n",
+    "  x <- gsub(\"^factor\\\\(condition\\\\)([^:]+)$\",                  \"HR CONDITION[\\\\1]\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1:factor\\\\(condition\\\\)([^:]+)$\",\n",
+    "            \"HR CNA_GENE1 : CONDITION[\\\\1]\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene2\\\\)1:factor\\\\(condition\\\\)([^:]+)$\",\n",
+    "            \"HR CNA_GENE2 : CONDITION[\\\\1]\", x)\n",
+    "  \n",
+    "  #main \n",
+    "  x <- gsub(\"^expr_gene1$\",                \"HR EXP_GENE1\", x)\n",
+    "  x <- gsub(\"^expr_gene2$\",                \"HR EXP_GENE2\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1$\",    \"HR CNA_GENE1\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene2\\\\)1$\",    \"HR CNA_GENE2\", x)\n",
+    "  \n",
+    "  # twoways interaction\n",
+    "  x <- gsub(\"^expr_gene1:expr_gene2$\",                       \"HR EXP_GENE1 : EXP_GENE2\", x)\n",
+    "  x <- gsub(\"^expr_gene1:factor\\\\(cna_gene2\\\\)1$\",           \"HR EXP_GENE1 : CNA_GENE2\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1:expr_gene2$\",           \"HR CNA_GENE1 : EXP_GENE2\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1:factor\\\\(cna_gene2\\\\)1$\",\"HR CNA_GENE1 : CNA_GENE2\", x)\n",
+    "  x\n",
+    "}\n",
+    "\n",
+    "# wide + generic + pretty \n",
+    "two_way_glmnet_wide_generic_pretty <- function(\n",
+    "    GEN1, GEN2,\n",
+    "    data,                        \n",
+    "    surv,                       \n",
+    "    dataset_label   = \"BRCA\",\n",
+    "    treatment_label = \"Paclitaxel\",\n",
+    "    alpha = 0,\n",
+    "    seed  = 73\n",
+    "){\n",
+    "  \n",
+    "  two_way_formula_str <- paste(\n",
+    "    \"~ (\",\n",
+    "    paste0(\"expr_\", GEN1), \"+\", paste0(\"factor(cna_\", GEN1, \")\"),\n",
+    "    \") * (\",\n",
+    "    paste0(\"expr_\", GEN2), \"+\", paste0(\"factor(cna_\", GEN2, \")\"),\n",
+    "    \")\",\n",
+    "    \"+\",\n",
+    "    \"factor(condition)\",\n",
+    "    \"+\",\n",
+    "    paste0(\"factor(cna_\", GEN1, \")\"), \":factor(condition)\",\n",
+    "    \"+\",\n",
+    "    paste0(\"factor(cna_\", GEN2, \")\"), \":factor(condition)\"\n",
+    "  )\n",
+    "  \n",
+    "\n",
+    "  mm <- model.matrix(as.formula(two_way_formula_str), data = data)\n",
+    "  if (\"(Intercept)\" %in% colnames(mm)) mm <- mm[, -1, drop = FALSE]\n",
+    "  \n",
+    "  # CV-glmnet (cox)\n",
+    "  set.seed(seed)\n",
+    "  cv_fit <- cv.glmnet(mm, surv, family = \"cox\", alpha = alpha)\n",
+    "  best_lambda <- cv_fit$lambda.min\n",
+    "  \n",
+    "  # Coef & HR\n",
+    "  coef_mat <- as.matrix(coef(cv_fit, s = \"lambda.min\"))\n",
+    "  coef_df <- tibble(\n",
+    "    Term         = rownames(coef_mat),\n",
+    "    Coefficient  = as.numeric(coef_mat[, 1]),\n",
+    "    Hazard_Ratio = exp(Coefficient)\n",
+    "  )\n",
+    "  \n",
+    "  # C-index\n",
+    "  risk <- predict(cv_fit, newx = mm, s = best_lambda, type = \"link\")\n",
+    "  cindex <- tryCatch({\n",
+    "    concordance.index(x = as.numeric(risk), surv.time = surv[,1], surv.event = surv[,2])$c.index\n",
+    "  }, error = function(e) NA_real_)\n",
+    "  \n",
+    " \n",
+    "  coef_df$Term_generic <- rename_generic_terms(coef_df$Term, GEN1, GEN2)\n",
+    "  coef_df$Term_pretty  <- rename_pretty_generic_terms(coef_df$Term_generic)\n",
+    "  \n",
+    "  # Wide\n",
+    "  wide_tbl <- coef_df %>%\n",
+    "    select(Term_pretty, Hazard_Ratio) %>%\n",
+    "    tidyr::pivot_wider(names_from = Term_pretty, values_from = Hazard_Ratio)\n",
+    "  \n",
+    "  # Meta\n",
+    "  wide_tbl <- wide_tbl %>%\n",
+    "    mutate(\n",
+    "      Dataset   = dataset_label,\n",
+    "      Treatment = treatment_label,\n",
+    "      Gene_Pair = paste(GEN1, \"+\", GEN2),\n",
+    "      C_Index   = round(cindex, 3),\n",
+    "      Lambda    = best_lambda,\n",
+    "      .before = 1\n",
+    "    )\n",
+    "  \n",
+    "  list(\n",
+    "    summary_wide_pretty = wide_tbl,\n",
+    "    coefficients_long   = coef_df,\n",
+    "    model               = cv_fit,\n",
+    "    lambda_min          = best_lambda\n",
+    "  )\n",
+    "}\n",
+    "\n",
+    "out1 <- two_way_glmnet_wide_generic_pretty(\n",
+    " GEN1 = \"TCF7L2\", GEN2 = \"LDHB\",\n",
+    " data = CYTOi_Paclitaxel_BRCA,\n",
+    " surv = CYTOi_BRCA_Paclitaxel_Surv\n",
+    ")\n",
+    "out2 <- two_way_glmnet_wide_generic_pretty(\n",
+    " GEN1 = \"TCF7L2\", GEN2 = \"FYN\",\n",
+    " data = CYTOi_Paclitaxel_BRCA,\n",
+    " surv = CYTOi_BRCA_Paclitaxel_Surv\n",
+    ")\n",
+    "out3 <- two_way_glmnet_wide_generic_pretty(\n",
+    " GEN1 = \"FYN\", GEN2 = \"CXCR4\",\n",
+    " data = CYTOi_Paclitaxel_BRCA,\n",
+    " surv = CYTOi_BRCA_Paclitaxel_Surv\n",
+    ")\n",
+    "\n",
+    "combined_results <- bind_rows(out1$summary_wide_pretty, out2$summary_wide_pretty, out3$summary_wide_pretty)\n",
+    "combined_results\n"
    ]
   },
   {
