--- a/jup_codes/Paclitaxel/Pac_All_Samples_Results.ipynb
+++ b/jup_codes/Paclitaxel/Pac_All_Samples_Results.ipynb
@@ -26,6 +26,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "id": "18e4a7d0",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "'d:/MultiDrug_Final/CYTOi/Paclitaxel/Expression_Mutation_CNA'"
+      ],
+      "text/latex": [
+       "'d:/MultiDrug\\_Final/CYTOi/Paclitaxel/Expression\\_Mutation\\_CNA'"
+      ],
+      "text/markdown": [
+       "'d:/MultiDrug_Final/CYTOi/Paclitaxel/Expression_Mutation_CNA'"
+      ],
+      "text/plain": [
+       "[1] \"d:/MultiDrug_Final/CYTOi/Paclitaxel/Expression_Mutation_CNA\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "getwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e1315485",
    "metadata": {
@@ -41,8 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d9d1781c",
+   "execution_count": 22,
+   "id": "60ce1dc4",
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -864,6 +897,210 @@
     "\n",
     "\n",
     "#------\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1472cd1e",
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A tibble: 3 × 16</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>Dataset</th><th scope=col>Treatment</th><th scope=col>Gene_Pair</th><th scope=col>C_Index</th><th scope=col>Lambda</th><th scope=col>HR EXP_GENE1</th><th scope=col>HR CNA_GENE1</th><th scope=col>HR EXP_GENE2</th><th scope=col>HR CNA_GENE2</th><th scope=col>HR CONDITION[sensitive]</th><th scope=col>HR EXP_GENE1 : EXP_GENE2</th><th scope=col>HR EXP_GENE1 : CNA_GENE2</th><th scope=col>HR CNA_GENE1 : EXP_GENE2</th><th scope=col>HR CNA_GENE1 : CNA_GENE2</th><th scope=col>HR CNA_GENE1 : CONDITION[sensitive]</th><th scope=col>HR CNA_GENE2 : CONDITION[sensitive]</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>ALL</td><td>Paclitaxel</td><td>TCF7L2 + LDHB</td><td>0.795</td><td>0.5894374</td><td>0.9591346</td><td>1.278453</td><td>1.1784229</td><td>1.0199174</td><td>0.7670825</td><td>1.0010576</td><td>0.9951319</td><td>1.0231455</td><td>1.124016</td><td>1.158952</td><td>1.0629705</td></tr>\n",
+       "\t<tr><td>ALL</td><td>Paclitaxel</td><td>TCF7L2 + FYN </td><td>0.801</td><td>6.1542916</td><td>0.9951024</td><td>1.049771</td><td>1.0104025</td><td>0.9875507</td><td>0.9761364</td><td>0.9999990</td><td>0.9989080</td><td>1.0080963</td><td>1.040774</td><td>1.044527</td><td>0.9977734</td></tr>\n",
+       "\t<tr><td>ALL</td><td>Paclitaxel</td><td>FYN + CXCR4  </td><td>0.901</td><td>0.2868797</td><td>1.0666667</td><td>0.842929</td><td>0.9575755</td><td>2.1898627</td><td>0.7554281</td><td>0.9969841</td><td>1.0976634</td><td>0.9710957</td><td>2.507691</td><td>0.961644</td><td>2.5823574</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 3 × 16\n",
+       "\\begin{tabular}{llllllllllllllll}\n",
+       " Dataset & Treatment & Gene\\_Pair & C\\_Index & Lambda & HR EXP\\_GENE1 & HR CNA\\_GENE1 & HR EXP\\_GENE2 & HR CNA\\_GENE2 & HR CONDITION{[}sensitive{]} & HR EXP\\_GENE1 : EXP\\_GENE2 & HR EXP\\_GENE1 : CNA\\_GENE2 & HR CNA\\_GENE1 : EXP\\_GENE2 & HR CNA\\_GENE1 : CNA\\_GENE2 & HR CNA\\_GENE1 : CONDITION{[}sensitive{]} & HR CNA\\_GENE2 : CONDITION{[}sensitive{]}\\\\\n",
+       " <chr> & <chr> & <chr> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t ALL & Paclitaxel & TCF7L2 + LDHB & 0.795 & 0.5894374 & 0.9591346 & 1.278453 & 1.1784229 & 1.0199174 & 0.7670825 & 1.0010576 & 0.9951319 & 1.0231455 & 1.124016 & 1.158952 & 1.0629705\\\\\n",
+       "\t ALL & Paclitaxel & TCF7L2 + FYN  & 0.801 & 6.1542916 & 0.9951024 & 1.049771 & 1.0104025 & 0.9875507 & 0.9761364 & 0.9999990 & 0.9989080 & 1.0080963 & 1.040774 & 1.044527 & 0.9977734\\\\\n",
+       "\t ALL & Paclitaxel & FYN + CXCR4   & 0.901 & 0.2868797 & 1.0666667 & 0.842929 & 0.9575755 & 2.1898627 & 0.7554281 & 0.9969841 & 1.0976634 & 0.9710957 & 2.507691 & 0.961644 & 2.5823574\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 3 × 16\n",
+       "\n",
+       "| Dataset &lt;chr&gt; | Treatment &lt;chr&gt; | Gene_Pair &lt;chr&gt; | C_Index &lt;dbl&gt; | Lambda &lt;dbl&gt; | HR EXP_GENE1 &lt;dbl&gt; | HR CNA_GENE1 &lt;dbl&gt; | HR EXP_GENE2 &lt;dbl&gt; | HR CNA_GENE2 &lt;dbl&gt; | HR CONDITION[sensitive] &lt;dbl&gt; | HR EXP_GENE1 : EXP_GENE2 &lt;dbl&gt; | HR EXP_GENE1 : CNA_GENE2 &lt;dbl&gt; | HR CNA_GENE1 : EXP_GENE2 &lt;dbl&gt; | HR CNA_GENE1 : CNA_GENE2 &lt;dbl&gt; | HR CNA_GENE1 : CONDITION[sensitive] &lt;dbl&gt; | HR CNA_GENE2 : CONDITION[sensitive] &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|---|\n",
+       "| ALL | Paclitaxel | TCF7L2 + LDHB | 0.795 | 0.5894374 | 0.9591346 | 1.278453 | 1.1784229 | 1.0199174 | 0.7670825 | 1.0010576 | 0.9951319 | 1.0231455 | 1.124016 | 1.158952 | 1.0629705 |\n",
+       "| ALL | Paclitaxel | TCF7L2 + FYN  | 0.801 | 6.1542916 | 0.9951024 | 1.049771 | 1.0104025 | 0.9875507 | 0.9761364 | 0.9999990 | 0.9989080 | 1.0080963 | 1.040774 | 1.044527 | 0.9977734 |\n",
+       "| ALL | Paclitaxel | FYN + CXCR4   | 0.901 | 0.2868797 | 1.0666667 | 0.842929 | 0.9575755 | 2.1898627 | 0.7554281 | 0.9969841 | 1.0976634 | 0.9710957 | 2.507691 | 0.961644 | 2.5823574 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  Dataset Treatment  Gene_Pair     C_Index Lambda    HR EXP_GENE1 HR CNA_GENE1\n",
+       "1 ALL     Paclitaxel TCF7L2 + LDHB 0.795   0.5894374 0.9591346    1.278453    \n",
+       "2 ALL     Paclitaxel TCF7L2 + FYN  0.801   6.1542916 0.9951024    1.049771    \n",
+       "3 ALL     Paclitaxel FYN + CXCR4   0.901   0.2868797 1.0666667    0.842929    \n",
+       "  HR EXP_GENE2 HR CNA_GENE2 HR CONDITION[sensitive] HR EXP_GENE1 : EXP_GENE2\n",
+       "1 1.1784229    1.0199174    0.7670825               1.0010576               \n",
+       "2 1.0104025    0.9875507    0.9761364               0.9999990               \n",
+       "3 0.9575755    2.1898627    0.7554281               0.9969841               \n",
+       "  HR EXP_GENE1 : CNA_GENE2 HR CNA_GENE1 : EXP_GENE2 HR CNA_GENE1 : CNA_GENE2\n",
+       "1 0.9951319                1.0231455                1.124016                \n",
+       "2 0.9989080                1.0080963                1.040774                \n",
+       "3 1.0976634                0.9710957                2.507691                \n",
+       "  HR CNA_GENE1 : CONDITION[sensitive] HR CNA_GENE2 : CONDITION[sensitive]\n",
+       "1 1.158952                            1.0629705                          \n",
+       "2 1.044527                            0.9977734                          \n",
+       "3 0.961644                            2.5823574                          "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#synergistic pen cox models------------------------------\n",
+    "\n",
+    "rename_generic_terms <- function(term_vec, GEN1, GEN2) {\n",
+    "  out <- term_vec\n",
+    "  # gene1\n",
+    "  out <- gsub(paste0(\"expr_\", GEN1), \"expr_gene1\", out, fixed = TRUE)\n",
+    "  out <- gsub(paste0(\"factor(cna_\", GEN1, \")1\"), \"factor(cna_gene1)1\", out, fixed = TRUE)\n",
+    "  # gene2\n",
+    "  out <- gsub(paste0(\"expr_\", GEN2), \"expr_gene2\", out, fixed = TRUE)\n",
+    "  out <- gsub(paste0(\"factor(cna_\", GEN2, \")1\"), \"factor(cna_gene2)1\", out, fixed = TRUE)\n",
+    "  out\n",
+    "}\n",
+    "\n",
+    "rename_pretty_generic_terms <- function(term_vec_generic) {\n",
+    "  x <- term_vec_generic\n",
+    "  \n",
+    "  x <- gsub(\"^factor\\\\(condition\\\\)([^:]+)$\",                  \"HR CONDITION[\\\\1]\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1:factor\\\\(condition\\\\)([^:]+)$\",\n",
+    "            \"HR CNA_GENE1 : CONDITION[\\\\1]\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene2\\\\)1:factor\\\\(condition\\\\)([^:]+)$\",\n",
+    "            \"HR CNA_GENE2 : CONDITION[\\\\1]\", x)\n",
+    "  \n",
+    "  #main \n",
+    "  x <- gsub(\"^expr_gene1$\",                \"HR EXP_GENE1\", x)\n",
+    "  x <- gsub(\"^expr_gene2$\",                \"HR EXP_GENE2\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1$\",    \"HR CNA_GENE1\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene2\\\\)1$\",    \"HR CNA_GENE2\", x)\n",
+    "  \n",
+    "  # twoways interaction\n",
+    "  x <- gsub(\"^expr_gene1:expr_gene2$\",                       \"HR EXP_GENE1 : EXP_GENE2\", x)\n",
+    "  x <- gsub(\"^expr_gene1:factor\\\\(cna_gene2\\\\)1$\",           \"HR EXP_GENE1 : CNA_GENE2\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1:expr_gene2$\",           \"HR CNA_GENE1 : EXP_GENE2\", x)\n",
+    "  x <- gsub(\"^factor\\\\(cna_gene1\\\\)1:factor\\\\(cna_gene2\\\\)1$\",\"HR CNA_GENE1 : CNA_GENE2\", x)\n",
+    "  x\n",
+    "}\n",
+    "\n",
+    "# wide + generic + pretty \n",
+    "two_way_glmnet_wide_generic_pretty <- function(\n",
+    "    GEN1, GEN2,\n",
+    "    data,                        \n",
+    "    surv,                       \n",
+    "    dataset_label   = \"ALL\",\n",
+    "    treatment_label = \"Paclitaxel\",\n",
+    "    alpha = 0,\n",
+    "    seed  = 73\n",
+    "){\n",
+    "  \n",
+    "  two_way_formula_str <- paste(\n",
+    "    \"~ (\",\n",
+    "    paste0(\"expr_\", GEN1), \"+\", paste0(\"factor(cna_\", GEN1, \")\"),\n",
+    "    \") * (\",\n",
+    "    paste0(\"expr_\", GEN2), \"+\", paste0(\"factor(cna_\", GEN2, \")\"),\n",
+    "    \")\",\n",
+    "    \"+\",\n",
+    "    \"factor(condition)\",\n",
+    "    \"+\",\n",
+    "    paste0(\"factor(cna_\", GEN1, \")\"), \":factor(condition)\",\n",
+    "    \"+\",\n",
+    "    paste0(\"factor(cna_\", GEN2, \")\"), \":factor(condition)\"\n",
+    "  )\n",
+    "  \n",
+    "\n",
+    "  mm <- model.matrix(as.formula(two_way_formula_str), data = data)\n",
+    "  if (\"(Intercept)\" %in% colnames(mm)) mm <- mm[, -1, drop = FALSE]\n",
+    "  \n",
+    "  # CV-glmnet (cox)\n",
+    "  set.seed(seed)\n",
+    "  cv_fit <- cv.glmnet(mm, surv, family = \"cox\", alpha = alpha)\n",
+    "  best_lambda <- cv_fit$lambda.min\n",
+    "  \n",
+    "  # Coef & HR\n",
+    "  coef_mat <- as.matrix(coef(cv_fit, s = \"lambda.min\"))\n",
+    "  coef_df <- tibble(\n",
+    "    Term         = rownames(coef_mat),\n",
+    "    Coefficient  = as.numeric(coef_mat[, 1]),\n",
+    "    Hazard_Ratio = exp(Coefficient)\n",
+    "  )\n",
+    "  \n",
+    "  # C-index\n",
+    "  risk <- predict(cv_fit, newx = mm, s = best_lambda, type = \"link\")\n",
+    "  cindex <- tryCatch({\n",
+    "    concordance.index(x = as.numeric(risk), surv.time = surv[,1], surv.event = surv[,2])$c.index\n",
+    "  }, error = function(e) NA_real_)\n",
+    "  \n",
+    " \n",
+    "  coef_df$Term_generic <- rename_generic_terms(coef_df$Term, GEN1, GEN2)\n",
+    "  coef_df$Term_pretty  <- rename_pretty_generic_terms(coef_df$Term_generic)\n",
+    "  \n",
+    "  # Wide\n",
+    "  wide_tbl <- coef_df %>%\n",
+    "    select(Term_pretty, Hazard_Ratio) %>%\n",
+    "    tidyr::pivot_wider(names_from = Term_pretty, values_from = Hazard_Ratio)\n",
+    "  \n",
+    "  # Meta\n",
+    "  wide_tbl <- wide_tbl %>%\n",
+    "    mutate(\n",
+    "      Dataset   = dataset_label,\n",
+    "      Treatment = treatment_label,\n",
+    "      Gene_Pair = paste(GEN1, \"+\", GEN2),\n",
+    "      C_Index   = round(cindex, 3),\n",
+    "      Lambda    = best_lambda,\n",
+    "      .before = 1\n",
+    "    )\n",
+    "  \n",
+    "  list(\n",
+    "    summary_wide_pretty = wide_tbl,\n",
+    "    coefficients_long   = coef_df,\n",
+    "    model               = cv_fit,\n",
+    "    lambda_min          = best_lambda\n",
+    "  )\n",
+    "}\n",
+    "\n",
+    "out1 <- two_way_glmnet_wide_generic_pretty(\n",
+    " GEN1 = \"TCF7L2\", GEN2 = \"LDHB\",\n",
+    " data = CYTOi_Paclitaxel_ALL,\n",
+    " surv = CYTOi_ALL_Paclitaxel_Surv\n",
+    ")\n",
+    "out2 <- two_way_glmnet_wide_generic_pretty(\n",
+    " GEN1 = \"TCF7L2\", GEN2 = \"FYN\",\n",
+    " data = CYTOi_Paclitaxel_ALL,\n",
+    " surv = CYTOi_ALL_Paclitaxel_Surv\n",
+    ")\n",
+    "out3 <- two_way_glmnet_wide_generic_pretty(\n",
+    " GEN1 = \"FYN\", GEN2 = \"CXCR4\",\n",
+    " data = CYTOi_Paclitaxel_ALL,\n",
+    " surv = CYTOi_ALL_Paclitaxel_Surv\n",
+    ")\n",
+    "\n",
+    "combined_results <- bind_rows(out1$summary_wide_pretty, out2$summary_wide_pretty, out3$summary_wide_pretty)\n",
+    "combined_results\n"
    ]
   },
   {
